--- a/LISy/LISy/AddDocument.xaml
+++ b/LISy/LISy/AddDocument.xaml
@@ -9,7 +9,7 @@
     <Grid x:Name="grid_add_doc">
         <Label x:Name="label_main" Content="Choose type document and just add IT" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="218" Height="30"/>
         <Button x:Name="add_book" Content="Book" HorizontalAlignment="Left" Margin="233,10,0,0" VerticalAlignment="Top" Width="75" Height="30" Click="add_book_Click"/>
-        <Button x:Name="add_reference_book" Content="Reference Book" HorizontalAlignment="Left" Margin="313,10,0,0" VerticalAlignment="Top" Width="100" Height="30"/>
+        <Button x:Name="add_reference_book" Content="Reference Book" HorizontalAlignment="Left" Margin="313,10,0,0" VerticalAlignment="Top" Width="100" Height="30" Click="add_reference_book_Click"/>
         <Button x:Name="add_journal" Content="Journal" HorizontalAlignment="Left" Margin="418,10,0,0" VerticalAlignment="Top" Width="75" Height="30" Click="add_journal_Click"/>
         <Button x:Name="add_av" Content="AV materials" HorizontalAlignment="Left" Margin="498,10,0,0" VerticalAlignment="Top" Width="85" Height="30" Click="add_av_Click"/>
         <Grid x:Name="grid_of_tools">
@@ -69,6 +69,23 @@
             <Button x:Name="add_ja_to_db" Content="Add" HorizontalAlignment="Left" Margin="521,169,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="add_ja_to_db_Click" Visibility="Hidden"/>
             <Label x:Name="ja_keywords_label" Content="KeyWords:" HorizontalAlignment="Left" Margin="10,169,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
             <TextBox x:Name="ja_keywords_text_box" HorizontalAlignment="Left" Height="26" Margin="85,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="ja_keywords_text_box_TextChanged" Visibility="Hidden"/>
+            <Label x:Name="inner_title_label" Content="Title:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+            <TextBox x:Name="inner_title_box" HorizontalAlignment="Left" Height="26" Margin="85,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" TextChanged="innner_title_TextChanged" FontSize="16" Visibility="Hidden"/>
+            <Label x:Name="inner_author_label" Content="Authors:" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+            <TextBox x:Name="inner_author_box" HorizontalAlignment="Left" Height="26" Margin="85,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="inner_author_TextChanged" Visibility="Hidden"/>
+            <Label x:Name="inner_room_label" Content="Room:" HorizontalAlignment="Left" Margin="313,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+            <TextBox x:Name="inner_room_text_box" HorizontalAlignment="Left" Height="26" Margin="388,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="inner_room_text_box_TextChanged" Visibility="Hidden"/>
+            <Label x:Name="inner_level_label" Content="Level:" HorizontalAlignment="Left" Margin="313,76,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+            <TextBox x:Name="inner_level_text_box" HorizontalAlignment="Left" Height="26" Margin="388,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="inner_level_text_box_TextChanged" Visibility="Hidden"/>
+            <Label x:Name="inner_keywords_label" Content="KeyWords:" HorizontalAlignment="Left" Margin="10,107,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+            <TextBox x:Name="inner_keywords_text_box" HorizontalAlignment="Left" Height="26" Margin="85,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="inner_keywords_text_box_TextChanged" Visibility="Hidden"/>
+            <Label x:Name="inner_type_label" Content="Type:" HorizontalAlignment="Left" Margin="313,107,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+            <TextBox x:Name="inner_type_text_box" HorizontalAlignment="Left" Height="26" Margin="388,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="inner_type_text_box_TextChanged" Visibility="Hidden"/>
+            <Label x:Name="inner_coverUrl_label" Content="CoverUrl:" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+            <TextBox x:Name="inner_cover_url_box" HorizontalAlignment="Left" Height="26" Margin="85,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="inner_cover_url_box_TextChanged" Visibility="Hidden"/>
+            <Button x:Name="add_inner_to_db" Content="Add" HorizontalAlignment="Left" Margin="521,138,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="add_inner_to_db_Click" Visibility="Hidden"/>
+
+
         </Grid>
     </Grid>
 </Window>
