--- a/LISy/LISy/BookingInfoWindow.xaml
+++ b/LISy/LISy/BookingInfoWindow.xaml
@@ -10,14 +10,15 @@
         <ImageBrush ImageSource="Design/bookss.jpg"/>
     </Window.Background>
     <Grid Background="#66000000" Margin="0,0,0,-3">
-        <Button x:Name="button_book" Content="Check out" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Width="100" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="16" Click="button_book_Click"/>
-        <Label x:Name="label_inStock" Content="" Margin="115,111,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.14,-0.026" Height="30" Foreground="White" FontSize="16" HorizontalAlignment="Left" Width="393"/>
-        <Label x:Name="label_return_data" Content="" HorizontalAlignment="Left" Margin="115,148,0,0" VerticalAlignment="Top" Width="393" Foreground="White" Height="30" FontSize="16" />
-        <Label x:Name="label_best_seller" Content="" HorizontalAlignment="Left" Margin="115,60,0,0" VerticalAlignment="Top" Height="20" Width="45" FontSize="8" Foreground="White"/>
-        <Image x:Name="image_best_seller" HorizontalAlignment="Left" Height="20" Margin="160,60,0,0" VerticalAlignment="Top" Width="20">
-            <Image.OpacityMask>
-                <ImageBrush ImageSource="Design/star_20x20.png"/>
-            </Image.OpacityMask>
-        </Image>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="117*"/>
+            <ColumnDefinition Width="401*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="BookButton" Content="Check out" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Width="100" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="16" Click="button_book_Click"/>
+        <Label x:Name="TitleLabel" Content="" Margin="115,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.14,-0.026" Height="30" Foreground="White" FontSize="16" HorizontalAlignment="Left" Width="393" Grid.ColumnSpan="2"/>
+        <Label x:Name="Authors" Content="" Margin="115,45,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.14,-0.026" Height="30" Foreground="White" FontSize="16" HorizontalAlignment="Left" Width="393" Grid.ColumnSpan="2"/>
+        <Label x:Name="BestSellerLabel" Content="" Margin="0,80,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.14,-0.026" Height="30" Foreground="White" FontSize="16" HorizontalAlignment="Left" Width="393" Grid.Column="1"/>
+        <Label x:Name="InStockLabel" Content="" Margin="0,115,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.14,-0.026" Height="30" Foreground="White" FontSize="16" HorizontalAlignment="Left" Width="393" Grid.Column="1"/>
+        <Label x:Name="ReturnDataLabel" Content="" HorizontalAlignment="Left" Margin="0,148,0,0" VerticalAlignment="Top" Width="393" Foreground="White" Height="30" FontSize="16" Grid.Column="1" />
     </Grid>
 </Window>
