Теперь Патрон все типы видит доков и Библиотекарь тоже, но пока нет изменения для Inner and JournalArticle И патрон пока не может делать чек аут Иннера, Журналов и АВ И в целом у нас нет добавление колличества копий у всего

--- a/LISy/LISy/LibrarianWorkWindow.xaml
+++ b/LISy/LISy/LibrarianWorkWindow.xaml
@@ -30,7 +30,7 @@
                     <DataGrid x:Name="DataGridAV_material" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="grid_LoaderAV_material"/>
                 </Grid>
             </TabItem>
-            <TabItem x:Name="reference_book" Header="Reference Books">
+            <TabItem x:Name="reference_book" Header="Inner Materials">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="DataGridRefernce_book" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="grid_LoaderReference_book"/>
                 </Grid>
