--- a/LISy/LISy/AddDocument.xaml
+++ b/LISy/LISy/AddDocument.xaml
@@ -12,9 +12,9 @@
     <Grid x:Name="grid_add_doc">
         <Label x:Name="label_main" Content="Choose the type of a document:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="218" Height="30" Foreground="White"/>
         <Button x:Name="add_book" Content="Book" HorizontalAlignment="Left" Margin="233,10,0,0" VerticalAlignment="Top" Width="75" Height="30" Click="add_book_Click"/>
-        <Button x:Name="add_reference_book" Content="Reference Book" HorizontalAlignment="Left" Margin="313,10,0,0" VerticalAlignment="Top" Width="100" Height="30" Click="add_reference_book_Click"/>
+        <Button x:Name="add_reference_book" Content="Inner material" HorizontalAlignment="Left" Margin="313,10,0,0" VerticalAlignment="Top" Width="100" Height="30" Click="add_reference_book_Click"/>
         <Button x:Name="add_journal" Content="Journal" HorizontalAlignment="Left" Margin="418,10,0,0" VerticalAlignment="Top" Width="75" Height="30" Click="add_journal_Click"/>
-        <Button x:Name="add_av" Content="AV materials" HorizontalAlignment="Left" Margin="498,10,0,0" VerticalAlignment="Top" Width="85" Height="30" Click="add_av_Click"/>
+        <Button x:Name="add_av" Content="AV material" HorizontalAlignment="Left" Margin="498,10,0,0" VerticalAlignment="Top" Width="85" Height="30" Click="add_av_Click"/>
         <Grid x:Name="grid_of_tools">
             <Label x:Name="title_label" Content="Title:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
             <TextBox x:Name="title_of_book" HorizontalAlignment="Left" Height="26" Margin="85,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" TextChanged="TextBox_titleChanged" FontSize="16" Visibility="Hidden"/>
