--- a/LISy/LISy/WorkWindow.xaml
+++ b/LISy/LISy/WorkWindow.xaml
@@ -63,6 +63,7 @@
             </TabControl>
 
         </Grid>
+        <Button x:Name="log_out_button" Content="Log Out" HorizontalAlignment="Left" Margin="15,251,0,0" VerticalAlignment="Top" Width="140" Height="30" Background="{x:Null}" Foreground="White" FontSize="16" BorderBrush="{x:Null}" Click="log_out_button_Click"/>
 
     </Grid>
 </Window>
